# DesignPatterns

./: README.md
Composite/: Composite.hpp  CompositeDemo.cpp
CompositeVisitor/: Composite.cpp  Composite.hpp  CompositeVisitorDemo.cpp  CountVisitor.hpp  DumpTreeVisitor.hpp  DumpVisitor.hpp  Visitor.hpp  XmlVisitor.hpp
DoubleDispatch/: DoubleDispatchTest.cpp  Event.cpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventHandler.hpp
EventNotifier/eventnotifier/: CriticalFaultFilter.java  Event.java  EventNotifierDemo.java  EventService.java  FaultEvent.java  Filter.java  InvalidEventTypeException.java  ModerateFaultFilter.java  PagingSystem.java  Subscriber.java
Perception/: CMakeLists.txt  Exceptions.h  PerceptionDemo.cpp  PerceptionEvent.cpp  PerceptionEvent.h
Perception/collectors/: Collector.h  CollectorFactory.h  NetworkCollector.cpp  NetworkCollector.h  SystemCollector.cpp  SystemCollector.h
Perception/collectors/Linux/: CollectorFactoryLinux.cpp  CollectorFactoryLinux.h  LinuxNetworkCollector.cpp  LinuxNetworkCollector.h
Perception/collectors/osx/: CollectorFactoryOsx.cpp  CollectorFactoryOsx.h  OsxNetworkCollector.cpp  OsxNetworkCollector.h
Perception/data/: Composite.cpp  Composite.h  DumpVisitor.cpp  DumpVisitor.h  JsonVisitor.cpp  JsonVisitor.h  Visitor.h
State/: FSMContext.cpp  FSMContext.h  FSMEvent.h  StateDemo.cpp
State/states/: FSMState.cpp  FSMState.h  InitState.cpp  InitState.h  PauseState.cpp  PauseState.h  PlayingState.cpp  PlayingState.h  StopState.cpp  StopState.h
presentation/: slides.pptx
